2011-01-23 Braden McDaniel  <braden@endoframe.com>

	Don't hard-code Gtk/GNOME _DISABLE_DEPRECATED preprocessor
	symbols, as this negatively affects forward compatibility.

	* src/Makefile.am

2011-01-23 Braden McDaniel  <braden@endoframe.com>

	Use JS_EncodeString instead of the obsolete JS_GetStringBytes.

	* configure.ac
	* src/script/javascript.cpp

2011-01-23 Braden McDaniel  <braden@endoframe.com>

	* configure.ac: Fix test to check whether JSVAL_TO_DOUBLE returns
	a pointer.

2011-01-22 Braden McDaniel  <braden@endoframe.com>

	SpiderMonkey included in the forthcoming XULRunner 2.0 changes the
	return value of JSVAL_TO_DOUBLE to a double (instead of a
	pointer).

	* configure.ac
	* src/script/javascript.cpp

2010-11-01 Braden McDaniel  <braden@endoframe.com>

	Boost.Filesystem headers include inline functions that call
	Boost.System functions.  Programs/libraries that use
	Boost.Filesystem need to link with libboost_system as well as
	libboost_filesystem.  The Mac OS X linker seems to be the only one
	that actually cares about this detail.

	* src/Makefile.am
	(libopenvrml_libopenvrml_la_LIBADD): Link with libboost_system.
	(local_libopenvrml_dl_la_LIBADD): Link with libboost_system.

2010-09-19 Braden McDaniel  <braden@endoframe.com>

	SpiderMonkey included in the forthcoming XULRunner 1.9.3 removes
	JS_AddRoot and JS_RemoveRoot and replaces them with type-specific
	functions.  Test for this and adjust our usage accordingly.

	* configure.ac
	* src/script/javascript.cpp

2010-09-18 Braden McDaniel  <braden@endoframe.com>

	* src/Makefile.am (EXTRA_DIST): Fixed directory for openvrml-gl.rc
	and openvrml-gl.vcxproj.

2010-09-18 Braden McDaniel  <braden@endoframe.com>

	SpiderMonkey included in the forthcoming XULRunner 1.9.3 includes
	changes to the JSPropertyOp function signature: a parameter that
	was a jsval in previous versions is now a jsid.  Test for this and
	adjust our usage accordingly.

	* configure.ac
	* src/script/javascript.cpp
